# scipy

./: .cirrus.star  .cirrus.yml  .clang-format  .coveragerc  .drone.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hadolint.yaml  .mailmap  .pre-commit-config.yaml  .spyderproject  .travis.yml  .travis_coveragerc  BENTO_BUILD.txt  CITATION.bib  CITATION.cff  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.rst  DEVELOPERS.txt  DISTUTILS.txt  FORMAT_GUIDELINES.txt  HACKING.rst.txt  INSTALL.rst  INSTALL.rst.txt  INSTALL.txt  Interpolate1D.py  LATEST.txt  LICENSE.txt  LICENSES_bundled.txt  MAINTAINER_VERIFICATION_REPORT.md  MANIFEST.in  Makefile  PACKAGERS.txt  PR_DESCRIPTION.md  (+123 more)
scipy/: .gitignore  LICENSE  __config__.py.in  __init__.py  _distributor_init.py  _fortran_fix.py  array_compatibility.py  bento.info  conftest.py  linalg.pxd  memetic_climbing.py  meson.build  optimize.pxd  parse_nonprintable_chars.py  scipy.pxd  scipy_config.h.in  setup.py  setupscons.py  special.pxd  tach.toml  version.py
scipy/NDISegmenter/: Segmenter.py  Segmenter_EXT.c  Segmenter_IMPL.c  __multiarray_api.h  __ufunc_api.h  config.h  control.py  ndImage_Segmenter_structs.h  setup.py  slice112.raw  testShenCastan.py  volumeInput.py
scipy/_build_utils/: __init__.py  _fortran.py  _generate_blas_wrapper.py  _system_info.py  _wrappers_common.py  compiler_helper.py  copyfiles.py  cythoner.py  echo.py  gcc_build_bitness.py  generate_blas_symbolsuffix_shims.py  int64.f2cmap.in  meson.build  setup.py  system_info.py  tempita.py
scipy/_external/: __init__.py  meson.build
scipy/_lib/: __init__.py  _array_api.py  _array_api_compat_vendor.py  _array_api_docs_tables.py  _array_api_no_0d.py  _array_api_override.py  _array_api_util.py  _boost_utils.py  _bounds.py  _bunch.py  _c99compat.h  _ccallback.py  _ccallback_c.pxd  _ccallback_c.pyx  _disjoint_set.py  _docscrape.py  _elementwise_algorithm.py  _elementwise_iterative_method.py  _finite_differences.py  _fpumode.c  _gcutils.py  _highs_utils.py  _lazy_testing.py  _numpy_compat.py  _pep440.py  _public_api.py  _sparse.py  _test_ccallback_cython.pxd  _test_ccallback_cython.pyx  _test_deprecation_call.pyx  _test_deprecation_def.pxd  _test_deprecation_def.pyx  _testutils.py  _threadsafety.py  _tmpdirs.py  _unuran_utils.py  _util.py  _version.py  bento.info  bscript  (+10 more)
scipy/_uarray/: __init__.py  _backend.py  backend.py  setup.py
scipy/array_api/: README.md  __init__.py  meson.build
scipy/build_utils/: __init__.py  _fortran.py
scipy/cluster/: SConscript  SConstruct  __init__.py  _heap.pxi  _hierarchy.pyx  _hierarchy_distance_update.pxi  _optimal_leaf_ordering.c  _optimal_leaf_ordering.pyx  _structures.pxi  _vq.pyx  _vq_rewrite.pyx  bento.info  bscript  cblas.pxd  cluster_blas.h  cluster_blas.pxd  distance.py  hierarchy.py  info.py  meson.build  setup.py  setupscons.py  vq.py
scipy/constants/: __init__.py  _codata.py  _codata_constants_2002.txt  _codata_constants_2006.txt  _constants.py  codata.py  codata_constants_2010.txt  codata_constants_2014.txt  constants.py  info.py  meson.build  setup.py
scipy/datasets/: __init__.py  _download_all.py  _fetchers.py  _funcs.py  _registry.py  _utils.py  download_all.py  meson.build  setup.py
scipy/diff/: __init__.py  _numdifftools_core.py  setup.py
scipy/differentiate/: __init__.py  _differentiate.py  meson.build
scipy/fft/: __init__.py  _backend.py  _basic.py  _basic_backend.py  _basic_uarray.py  _debug_backends.py  _fftlog.py  _fftlog_backend.py  _fftlog_multimethods.py  _fftlog_np.py  _fftlog_uarray.py  _helper.py  _helper_np.py  _realtransforms.py  _realtransforms_backend.py  _realtransforms_np.py  _realtransforms_uarray.py  basic.py  czt.py  meson.build  realtransforms.py  setup.py
scipy/fftpack/: FFTLog-Examples.ipynb  NOTES.txt  SConscript  SConstruct  __init__.py  _basic.py  _helper.py  _pseudo_diffs.py  _realtransforms.py  basic.py  bento.info  bscript  common.py  convolve.py  convolve.pyx  czt.py  fftl.pyf  fftpack.pyf  fftpack_version.py  helper.py  info.py  logarithmic.py  meson.build  pseudo_diffs.py  realtransforms.py  setup.py  setupscons.py
scipy/integrate/: SConscript  SConstruct  __dop.c  __dop.h  __init__.py  __odepack.h  __quadpack.c  __quadpack.h  _bvp.py  _cubature.py  _dopmodule.c  _doubleexp.py  _doubleexp_coefs.py  _dzvodemodule.c  _generate_doubleexp.py  _lebedev.py  _ode.py  _odepack_py.py  _odepackmodule.c  _quad_vec.py  _quadpack_py.py  _quadpackmodule.c  _quadrature.py  _tanhsinh.py  _tanhsinh2.py  bento.info  bscript  dop.py  dop.pyf  doubleexp.py  doubleexp_generators.py  info.py  lsoda-f2pywrappers.f  lsoda.py  lsoda.pyf  meson.build  multipack.h  ode.py  odepack.py  pyodepack.f90  (+8 more)
scipy/interpolate/: README  SConscript  SConstruct  __init__.py  _aaa.py  _arclength.py  _bary_rational.py  _bspl.pyx  _bsplines.py  _cubic.py  _find_interval.pxi  _fitpack2.py  _fitpack_impl.py  _fitpack_py.py  _fitpack_repro.py  _interpnd.pyx  _interpolate.py  _inverse_distance_weighted.py  _isotonic.py  _lsq_multivariate.py  _lsq_multivariate_basis.py  _lsq_multivariate_grid.py  _lsq_multivariate_penalty.py  _lsq_multivariate_solver.py  _lsq_multivariate_validation.py  _monotone.py  _ndbspline.py  _ndgriddata.py  _pade.py  _poly_common.pxi  _polyint.py  _ppoly.pyx  _ratinterp.py  _rbf.py  _rbfinterp.py  _rbfinterp_common.py  _rbfinterp_dynamo.py  _rbfinterp_jaxjit.py  _rbfinterp_np.py  _rbfinterp_numba.py  (+34 more)
scipy/io/: SConscript  SConstruct  __init__.py  _fortran.py  _idl.py  _mmio.py  _netcdf.py  _test_fortran.f  _test_fortran_py.py  array_import.py  bento.info  bscript  data_store.py  datasource.py  dumb_shelve.py  dumbdbm_patched.py  fopen.py  fortran.py  harwell_boeing.py  idl.py  idlsave.py  info.py  matlab.py  meson.build  mio.py  mio4.py  mio5.py  miobase.py  mmio.py  netcdf.py  npfile.py  npy_3kcompat.h  numpyiomodule.c  path.py  pickler.py  recaster.py  setup.py  setupscons.py  test_fortran.pyf  wavfile.py
scipy/ipython/: distributions.py
scipy/lib/: __init__.py  _gcutils.py  _numpy_compat.py  _util.py  _version.py  info.py  (+5 more)
(+11217 files in other folders)
